--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ chardet==3.0.4
 defusedxml==0.5.0
 dj-database-url==0.4.2
 Django==2.0
+django-summernote==0.8.8.5
 flake8==3.5.0
 gunicorn==19.7.1
 mccabe==0.6.1
